force-app/main/default/objects/Travel_Eligibility__c/Travel_Eligibility__c.object-meta.xml
<CustomObject>
    <label>Travel Eligibility</label>
    <nameField>
        <displayFormat>TA{0000}</displayFormat>
        <label>Travel_Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Eligibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>