force-app/main/default/objects/Travel_Eligibility__c/fields/Accommodation_Other_District__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Other_District__c</fullName>
    <label>Accommodation Other District</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>