force-app/main/default/objects/Travel_Eligibility__c/fields/Conveyance_Allowance_per_KM_Bike__c.field-meta.xml
<CustomField>
    <fullName>Conveyance_Allowance_per_KM_Bike__c</fullName>
    <label>TA Per KM Charges :  Bike</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>