force-app/main/default/objects/Travel_Eligibility__c/fields/DA_Other_State__c.field-meta.xml
<CustomField>
    <fullName>DA_Other_State__c</fullName>
    <label>DA Other State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>