force-app/main/default/objects/Travel_Eligibility__c/fields/Daily_Allowance_HQ__c.field-meta.xml
<CustomField>
    <fullName>Daily_Allowance_HQ__c</fullName>
    <label>DA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>