force-app/main/default/objects/Travel_Eligibility__c/fields/Daily_limit_Auto__c.field-meta.xml
<CustomField>
    <fullName>Daily_limit_Auto__c</fullName>
    <label>Daily limit : Auto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>