force-app/main/default/objects/Travel_Eligibility__c/fields/Daily_limit_Bike__c.field-meta.xml
<CustomField>
    <fullName>Daily_limit_Bike__c</fullName>
    <label>Daily limit KM: Bike</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>