force-app/main/default/objects/Travel_Eligibility__c/fields/In_State_Single_Occupancy_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>In_State_Single_Occupancy_Accommodation__c</fullName>
    <label>In State Single Occupancy Accommodation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>