force-app/main/default/objects/Travel_Eligibility__c/fields/Locking_KM__c.field-meta.xml
<CustomField>
    <fullName>Locking_KM__c</fullName>
    <label>Locking KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>