force-app/main/default/objects/Travel_Eligibility__c/fields/Lodging_Food_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Food_Expenses__c</fullName>
    <inlineHelpText>Upcountry Travel Lodging + Food Expenses (If Self Managed)</inlineHelpText>
    <label>Lodging + Food Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>