force-app/main/default/objects/Travel_Eligibility__c/fields/Lodging_Food_Not_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Food_Not_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lodging + Food Not Eligible</label>
    <type>Checkbox</type>
</CustomField>