force-app/main/default/objects/Travel_Eligibility__c/fields/Monthly_limit_Auto__c.field-meta.xml
<CustomField>
    <fullName>Monthly_limit_Auto__c</fullName>
    <description>Approval Limit</description>
    <label>Monthly limit : Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>