force-app/main/default/objects/Travel_Eligibility__c/fields/Monthly_limit_Bike__c.field-meta.xml
<CustomField>
    <fullName>Monthly_limit_Bike__c</fullName>
    <description>More than this Approval Needed</description>
    <label>Monthly KM limit : Bike</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>