force-app/main/default/objects/Travel_Eligibility__c/fields/Monthly_Limit_Car__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Limit_Car__c</fullName>
    <description>Approval Limit</description>
    <label>Monthly KM Limit : Car</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>