force-app/main/default/objects/Travel_Eligibility__c/fields/OutofStateSingle_Occupancy_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>OutofStateSingle_Occupancy_Accommodation__c</fullName>
    <label>Out of State Single Occupancy Accommo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>