force-app/main/default/objects/Travel_Eligibility__c/fields/Rate_Per_KM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_KM__c</fullName>
    <label>Rate Per KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>