force-app/main/default/objects/Travel_Eligibility__c/fields/Travel_Mode_HQ__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode_HQ__c</fullName>
    <label>Travel Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_of_Transport</valueSetName>
    </valueSet>
</CustomField>